<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="handle">\@Handle</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="create_new_post">Create New Post</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="post_hint">What\'s on your mind?</string>
    <string name="logout">Logout</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
</resources>
