<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.post.PostActivity">


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/create_new_post"
              android:id="@+id/title"
              android:gravity="center"
              android:textSize="16sp"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"/>
    <View android:layout_width="match_parent" android:layout_height="2dp"
          android:background="#efefef"
          app:layout_constraintBottom_toTopOf="@id/editStatus"/>
    <EditText android:layout_width="match_parent"
              android:layout_height="500dp"
              android:inputType="textMultiLine"
              app:layout_constraintTop_toBottomOf="@id/title"
              android:gravity="start|top"
              android:ems="10"
              android:id="@+id/editStatus"
              android:hint="@string/post_hint"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:layout_marginTop="60dp"/>
    <View android:layout_width="match_parent" android:layout_height="2dp"
          android:background="#efefef"
          app:layout_constraintTop_toBottomOf="@id/editStatus"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:gravity="end"
                  android:layout_gravity="bottom"
                  style="?android:attr/buttonBarStyle"
                  app:layout_constraintBottom_toBottomOf="parent"
                  tools:layout_editor_absoluteX="-34dp">
        <Button android:id="@+id/cancelPost" android:layout_width="wrap_content" android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/cancel"
                android:background="@color/colorAccent"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
        <Button android:id="@+id/postStatus" android:layout_width="wrap_content" android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/post"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>